# gestalt-agent-server

./: .gitignore  langgraph.json  pyproject.toml
app/: langgraph.json  pyproject.toml
app/src/ME118Agent/: document_loader.py  main.py  vectorstore.py
app/src/ME135Agent/: main.py  vectorstore.py
src/agents/ME118Agent/: main.py  vectorstore.py
src/agents/me118_agent/: vectorstore.py
src/core/: settings.py
src/document_loaders/: firebase_loader.py
src/extract_derivations/: graph.py
src/extract_derivations/output/: output.json
src/extract_question/: graph.py
src/extract_question/output/: output.json
src/firebase/: fb_initialization.py
src/generate_questions/: graph.py
src/lecture_analysis/: graph.py
src/lecture_analysis/output/: output.json
src/tools/: tools.py
